<!--
  ~
  ~   ~ Copyright (c) 2017. ThanksMister LLC
  ~   ~
  ~   ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~   ~ you may not use this file except in compliance with the License. 
  ~   ~ You may obtain a copy of the License at
  ~   ~
  ~   ~ http://www.apache.org/licenses/LICENSE-2.0
  ~   ~
  ~   ~ Unless required by applicable law or agreed to in writing, software distributed 
  ~   ~ under the License is distributed on an "AS IS" BASIS, 
  ~   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
  ~   ~ See the License for the specific language governing permissions and 
  ~   ~ limitations under the License.
  ~   
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:paddingTop="16dp"
             android:paddingBottom="16dp">
    
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_space_small">
    
        <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/body_text_1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="left"
                android:text="@string/menu_create_receipt"
                android:layout_marginLeft="@dimen/activity_padding"/>

        <EditText
                style="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/body_text_2"
                android:id="@android:id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center"
                android:imeOptions="actionDone"
                android:hint="@string/text_receipt_hint" 
                android:singleLine="true"/>
            
            <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/body_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/dialog_receipt_description"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

        </LinearLayout>
    
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_space_small"/>
    
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:layout_marginRight="8dp"
                android:gravity="right">

                 <Button
                        android:id="@android:id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/BorderlessButtonStyle"
                        android:text="@string/button_cancel"/>
        
                <Button
                        android:id="@android:id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/BorderlessButtonStyle.Active"
                        android:text="@string/button_save"/>

        </LinearLayout>

</LinearLayout>
